# lianli_driver

./: .gitignore  README.md  pyproject.toml
examples/: protocols.example.json
src/lianli_driver/: __init__.py  cli.py  constants.py  device_manager.py  fan_curve.py  hidraw.py  hwmon.py  lcd.py  protocol.py  sensors.py  service.py  usb_bulk.py  util.py
src/lianli_driver/devices/: __init__.py  base.py  hydroshift.py  uni_fan_tl.py  usb_bulk.py
src/lianli_driver/web/: app.js  index.html  styles.css
systemd/: lianli-driver.service
tests/: test_device_manager.py  test_fan_curve.py  test_hidraw.py  test_lcd.py  test_protocol.py
udev/: 99-lianli-driver.rules
